added batchTraining